# Soushi_Neural_Style_Transfer

./: .gitignore  .gitmodules  Pipfile  README.md  pyproject.toml
src/: mystylize.py  web.py
src/templates/: base.html.jinja  form.html.jinja  status.html.jinja
src/templates/css/: style.css
